<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RadioGroup
        android:id="@+id/radioGroupTipoVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/textViewTipoDeVeiculo">

        <RadioButton
            android:id="@+id/radioButtonCarro"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/carro" />

        <RadioButton
            android:id="@+id/radioButtonMoto"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/moto" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nome"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text|textPersonName|textCapWords"
        android:text="Nome"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="apagar"
        android:text="Apagar"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/salvar"
        app:layout_constraintTop_toTopOf="@+id/salvar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/inserir_dados"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTipoDeVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tipo_veiculo"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_de_combustivel"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintTop_toTopOf="@+id/textViewTipoDeVeiculo" />

    <CheckBox
        android:id="@+id/checkBoxGasolina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gasolina"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <CheckBox
        android:id="@+id/checkBoxAlcool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alcool"
        app:layout_constraintStart_toStartOf="@+id/checkBoxGasolina"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxGasolina" />

    <CheckBox
        android:id="@+id/checkBoxFlex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flex"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAlcool"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAlcool" />

    <CheckBox
        android:id="@+id/checkBoxDiesel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diesel"
        app:layout_constraintStart_toStartOf="@+id/checkBoxFlex"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxFlex" />

    <Button
        android:id="@+id/salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:onClick="enviar"
        android:text="@string/salvar"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMarca" />

    <Spinner
        android:id="@+id/spinnerMarca"
        android:layout_width="251dp"
        android:layout_height="29dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxDiesel" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="Abrisobre"
        android:text="@string/btSobre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>